# HSCFS

./: CMakeLists.txt  README.md
.VSCodeCounter/2023-03-16_12-26-38/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
inc/api/: hscfs.hh
inc/cache/: SIT_NAT_cache.hh  block_buffer.hh  cache_manager.hh  dentry_cache.hh  dir_data_block_cache.hh  node_block_cache.hh  page_cache.hh  super_cache.hh
inc/communication/: channel.h  comm_api.h  dev.h  memory.h  session.h  session_cmd_ctx.h  session_env.h  vendor_cmds.h
inc/fs/: NAT.hh  NAT_utils.hh  SIT.hh  SIT_utils.hh  block_buffer.hh  cache_manager.hh  directory.hh  fd_array.hh  file.hh  file_mapping.hh  file_utils.hh  fs.h  fs_manager.hh  node_block_fetcher.hh  open_flags.hh  opened_file.hh  path_parser.hh  path_utils.hh  replace_proc.hh  replace_protect.hh  server_thread.hh  srmap_utils.hh  super_manager.hh  write_back_helper.hh
inc/journal/: journal_commit_queue.hh  journal_container.hh  journal_module_init.hh  journal_process_env.hh  journal_processor.hh  journal_type.h  journal_writer.hh
inc/mkfs/: mkhscfs.hh
inc/ssd/: path_lookup.hh
inc/utils/: declare_utils.hh  dma_buffer_deletor.hh  exception_handler.hh  hscfs_exceptions.hh  hscfs_log.h  hscfs_multithread.h  hscfs_timer.h  io_utils.hh  lock_guards.hh  queue_extras.h  spin_lock_guard.hh  sys_log.h  types.h
mkfs/: CMakeLists.txt  mkhscfs.cc
src/: CMakeLists.txt
src/api/: close.cc  fini.cc  fsync.cc  init.cc  link.cc  lseek.cc  mkdir.cc  open.cc  read.cc  rmdir.cc  truncate.cc  unlink.cc  write.cc
src/cache/: SIT_NAT_cache.cc  block_buffer.cc  dentry_cache.cc  dir_data_block_cache.cc  node_block_cache.cc  page_cache.cc  super_cache.cc
src/communication/: channel.c  comm_api.c  session.c  session_cmd_ctx.c  session_env.c
src/debug/: debug_utils.cc
src/fs/: NAT_utils.cc  SIT_utils.cc  block_buffer.cc  directory.cc  fd_array.cc  file.cc  file_mapping.cc  file_utils.cc  fs_manager.cc  node_block_fetcher.cc  open.cc  opened_file.cc  path_parser.cc  path_utils.cc  relpace_proc.cc  replace_protect.cc  srmap_utils.cc  super_manager.cc  write_back_helper.cc
src/journal/: journal_commit_queue.cc  journal_module_init.cc  journal_process_env.cc  journal_processor.cc  journal_writer.cc
src/ssd/: path_lookup.cc
src/utils/: debug_utils.cc  exception_handler.cc  hscfs_log.c  hscfs_timer.c  lock_guards.cc  sys_log.c
test/: CMakeLists.txt  log  log.txt
test/cache/: CMakeLists.txt  cache_mock.cc  test_cache_manager.cc  test_node_cache.cc  test_sit_nat_cache.cc
test/communication/: CMakeLists.txt  spdk_mock.cc  test_channel.cpp  test_comm.cc  test_docking.cc
test/fs/: CMakeLists.txt  test_cache_manager.cc
test/fs_basic_modules/: CMakeLists.txt  test_path_utils.cc
test/fs_host/: CMakeLists.txt  build_fs_image.cc  host_mkfs_env.cc  host_test_env.cc  test_read.cc  test_truncate.cc  test_unlink.cc
test/hw_test/: CMakeLists.txt  test_main.cc
test/inc/: SSD_mock.hh  host_test_env.hh  spdk_mock.h  stub.h
test/journal/: CMakeLists.txt  out.txt  test_journal.cc
test/mock/: SSD_mock.cc  spdk_mock.cc
test/utils/: CMakeLists.txt  test_timer.cc
